add collection, js grid consistency

--- a/badge/index.html
+++ b/badge/index.html
@@ -5,15 +5,10 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Foundation 4</title>
-
-  
-  <link rel="stylesheet" href="stylesheets/app.css">
-  
-
-  <script src="javascripts/vendor/custom.modernizr.js"></script>
-
+  	<meta name="viewport" content="width=device-width">
+  	<title>Mozilla BackPack</title>
+  	<link rel="stylesheet" href="../stylesheets/app.css">
+  	<script src="../javascripts/vendor/custom.modernizr.js"></script>
 </head>
 <body>
 	<div class="row">
@@ -33,9 +28,9 @@
 			          
 			        <section class="top-bar-section">
 			            <ul class="left">
-			              <li><a href="index.html">Welcome</a></li>
-			              <li><a href="badges.html">Badges</a></li>
-			              <li><a href="collections.html">Collections</a></li>
+			              <li><a href="/">Welcome</a></li>
+			              <li><a href="/badge">Badges</a></li>
+			              <li><a href="/collection">Collections</a></li>
 			            </ul>
 			            <!-- Right Nav Section -->
 			            <ul class="right">
@@ -69,108 +64,108 @@
 			</div>
 			</form>
 		</div>
-	<div class="row">
-		<div class="large-12 columns">
-			<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs">
-			  <li>
-			  	<a class="thumb" id="badge-hash-a" href="#" style="background-image:url('./img/badge/badge-a.png');">
-					<span class="detail">
-			  			<span class="title">Badge A</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			  	</a>
-			  </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-b" href="#" style="background-image:url('./img/badge/badge-b.png');">
-					<span class="detail">
-			  			<span class="title">Badge B</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-c" href="#" style="background-image:url('./img/badge/badge-c.png');">
-					<span class="detail">
-			  			<span class="title">Badge C</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-d" href="#" style="background-image:url('./img/badge/badge-d.png');">
-					<span class="detail">
-			  			<span class="title">Badge D</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			  <li>
-			  	<a class="thumb" id="badge-hash-e" href="#" style="background-image:url('./img/badge/badge-e.png');">
-					<span class="detail">
-			  			<span class="title">Badge E</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			  	</a>
-			  </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-f" href="#" style="background-image:url('./img/badge/badge-f.png');">
-					<span class="detail">
-			  			<span class="title">Badge F</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-g" href="#" style="background-image:url('./img/badge/badge-g.png');">
-					<span class="detail">
-			  			<span class="title">Badge G</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			 <li>
-			 	<a class="thumb" id="badge-hash-h" href="#" style="background-image:url('./img/badge/badge-h.png');">
-					<span class="detail">
-			  			<span class="title">Badge H</span>
-			  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			  		</span>
-			 	</a>
-			 </li>
-			  <li>
-			  	<a class="thumb" id="badge-hash-i" href="#" style="background-image:url('./img/badge/badge-h.png');">
-			 		<span class="detail">
-			   			<span class="title">Badge I</span>
-			   			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			   		</span>
-			  	</a>
-			  </li>
-			   <li>
-			   	<a class="thumb" id="badge-hash-j" href="#" style="background-image:url('./img/badge/badge-h.png');">
-			  		<span class="detail">
-			    			<span class="title">Badge J</span>
-			    			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			    	</span>
-			   	</a>
-			   </li>
-			    <li>
-			    	<a class="thumb" id="badge-hash-k" href="#" style="background-image:url('./img/badge/badge-h.png');">
-			   		<span class="detail">
-			     			<span class="title">Badge K</span>
-			     			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			     		</span>
-			    	</a>
-			    </li>
-			     <li>
-			     	<a class="thumb" id="badge-hash-l" href="#" style="background-image:url('./img/badge/badge-h.png');">
-			    		<span class="detail">
-			      			<span class="title">Badge L</span>
-			      			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
-			      		</span>
-			     	</a>
-			     </li>
-			</ul>
+		<div class="row">
+			<div class="large-12 columns">
+				<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square grid">
+				  <li>
+				  	<a class="badgethumb badgehash-a" href="#" style="background-image:url('../img/badge/badgehash-a-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge A</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				  	</a>
+				  </li>
+				 <li>
+				 	<a class="badgethumb badgehash-b" href="#" style="background-image:url('../img/badge/badgehash-b-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge B</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-c" href="#" style="background-image:url('../img/badge/badgehash-c-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge C</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-d" href="#" style="background-image:url('../img/badge/badgehash-d-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge D</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				  <li>
+				  	<a class="badgethumb badgehash-e" href="#" style="background-image:url('../img/badge/badgehash-e-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge E</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				  	</a>
+				  </li>
+				 <li>
+				 	<a class="badgethumb badgehash-f" href="#" style="background-image:url('../img/badge/badgehash-f-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge F</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-g" href="#" style="background-image:url('../img/badge/badgehash-g-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge G</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-h" href="#" style="background-image:url('../img/badge/badgehash-h-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge H</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				  <li>
+				  	<a class="badgethumb badgehash-i" href="#" style="background-image:url('../img/badge/badgehash-i-m.png');">
+				 		<span class="detail">
+				   			<span class="title">Badge I</span>
+				   			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				   		</span>
+				  	</a>
+				  </li>
+				   <li>
+				   	<a class="badgethumb badgehash-j" href="#" style="background-image:url('../img/badge/badgehash-j-m.png');">
+				  		<span class="detail">
+				    			<span class="title">Badge J</span>
+				    			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				    		</span>
+				   	</a>
+				   </li>				  
+				    <li>
+				    	<a class="badgethumb badgehash-k" href="#" style="background-image:url('../img/badge/badgehash-k-m.png');">
+				   		<span class="detail">
+				     			<span class="title">Badge K</span>
+				     			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				     		</span>
+				    	</a>
+				    </li>
+				     <li>
+				     	<a class="badgethumb badgehash-l" href="#" style="background-image:url('../img/badge/badgehash-l-m.png');">
+				    		<span class="detail">
+				      			<span class="title">Badge L</span>
+				      			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				      		</span>
+				     	</a>
+				     </li>
+				</ul>
+			</div>
 		</div>
-	</div>
 
 	<div class="pagination-centered">
 	  <ul class="pagination">
@@ -192,47 +187,49 @@
 
   <script>
   document.write('<script src=' +
-  ('__proto__' in {} ? 'javascripts/vendor/zepto' : 'javascripts/vendor/jquery') +
+  ('__proto__' in {} ? '../javascripts/vendor/zepto' : '../javascripts/vendor/jquery') +
   '.js><\/script>')
   </script>
   
-  <script src="javascripts/foundation/foundation.js"></script>
+  <script src="../javascripts/foundation/foundation.js"></script>
 	
-	<script src="javascripts/foundation/foundation.abide.js"></script>
+	<script src="../javascripts/foundation/foundation.abide.js"></script>
 	
-	<script src="javascripts/foundation/foundation.alerts.js"></script>
+	<script src="../javascripts/foundation/foundation.alerts.js"></script>
 	
-	<script src="javascripts/foundation/foundation.clearing.js"></script>
+	<script src="../javascripts/foundation/foundation.clearing.js"></script>
 	
-	<script src="javascripts/foundation/foundation.cookie.js"></script>
+	<script src="../javascripts/foundation/foundation.cookie.js"></script>
 	
-	<script src="javascripts/foundation/foundation.dropdown.js"></script>
+	<script src="../javascripts/foundation/foundation.dropdown.js"></script>
 	
-	<script src="javascripts/foundation/foundation.forms.js"></script>
+	<script src="../javascripts/foundation/foundation.forms.js"></script>
 	
-	<script src="javascripts/foundation/foundation.interchange.js"></script>
+	<script src="../javascripts/foundation/foundation.interchange.js"></script>
 	
-	<script src="javascripts/foundation/foundation.joyride.js"></script>
+	<script src="../javascripts/foundation/foundation.joyride.js"></script>
 	
-	<script src="javascripts/foundation/foundation.magellan.js"></script>
+	<script src="../javascripts/foundation/foundation.magellan.js"></script>
 	
-	<script src="javascripts/foundation/foundation.orbit.js"></script>
+	<script src="../javascripts/foundation/foundation.orbit.js"></script>
 	
-	<script src="javascripts/foundation/foundation.placeholder.js"></script>
+	<script src="../javascripts/foundation/foundation.placeholder.js"></script>
 	
-	<script src="javascripts/foundation/foundation.reveal.js"></script>
+	<script src="../javascripts/foundation/foundation.reveal.js"></script>
 	
-	<script src="javascripts/foundation/foundation.section.js"></script>
+	<script src="../javascripts/foundation/foundation.section.js"></script>
 	
-	<script src="javascripts/foundation/foundation.tooltips.js"></script>
+	<script src="../javascripts/foundation/foundation.tooltips.js"></script>
 	
-	<script src="javascripts/foundation/foundation.topbar.js"></script>
+	<script src="../javascripts/foundation/foundation.topbar.js"></script>
 	
-  
+
   <script>
     $(document).foundation();
   </script>
-    <script src="javascripts/backpack.js"></script>
+
+	<script src="../javascripts/jquery.timeago.js"></script>
+	<script src="../javascripts/backpack.js"></script>
 
 </body>
 </html>
