--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			          
 			        <section class="top-bar-section">
 			            <ul class="left">
-			              <li><a href="index.html">Welcome</a></li>
-			              <li><a href="./badge">Badges</a></li>
-			              <li><a href="./collection">Collections</a></li>
+			              <li><a href="/">Welcome</a></li>
+			              <li><a href="/badge">Badges</a></li>
+			              <li><a href="/collection">Collections</a></li>
 			            </ul>
 			            <!-- Right Nav Section -->
 			            <ul class="right">
@@ -44,7 +44,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 			<h3>Recently Earned Badges</h2>
-			<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square">
+			<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square grid">
 			  <li>
 			  	<a class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-m.png');">
 					<span class="detail">
@@ -116,7 +116,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 			<h3>Collections</h2>
-			<ul class="small-block-grid-1 large-block-grid-3 collections">
+			<ul class="small-block-grid-1 large-block-grid-3 collections grid">
 				<li>
 					<ul class="badge-thumbs vertical">
 						<li>
