--- a/badge/index.html
+++ b/badge/index.html
@@ -28,9 +28,9 @@
 			          
 			        <section class="top-bar-section">
 			            <ul class="left">
-			              <li><a href="/">Welcome</a></li>
-			              <li><a href="/badge">Badges</a></li>
-			              <li><a href="/collection">Collections</a></li>
+			              <li><a href="../">Welcome</a></li>
+			              <li><a href="../badge">Badges</a></li>
+			              <li><a href="../collection">Collections</a></li>
 			            </ul>
 			            <!-- Right Nav Section -->
 			            <ul class="right">
