--- a/badge/by-organization/organizationhash-x.html
+++ b/badge/by-organization/organizationhash-x.html
@@ -40,166 +40,130 @@
 			          </section></nav>
 		</div>
 	</div>
+	<div class="row">
+			<form id="badgefilter" class="custom">
+				<div class="large-12 columns">
+				<h2>Badges issued by Organization X</h2>
+				<ul class="small-block-grid-2 large-block-grid-4">
+					<li>
+						<select id="collectionFilter" class="medium">
+							<option disabled="" selected="">Filter by Collection</option>
+							<option>This is another option</option>
+							<option>This is another option too</option>
+							<option>Look, a third option</option>
+						</select>
+					</li>
+					<li>
+						<select id="organizationFilter" class="medium">
+							<option disabled="" selected="">Filter by Organization</option>
+							<option>This is another option</option>
+							<option>This is another option too</option>
+							<option>Look, a third option</option>
+						</select>
+					</li>
+				</ul>
+			</div>
+			</form>
+		</div>
 		<div class="row">
 			<div class="large-12 columns">
-				<h3>Badges Issued by Organization X</h2>
-				<ul class="small-block-grid-2 large-block-grid-4 collection-thumbs square grid">
+				<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square grid">
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-c-s.png');"></span>
-				  		</span>
+				  	<a class="badgethumb badgehash-a" href="#" style="background-image:url('../../img/badge/badgehash-a-m.png');">
 						<span class="detail">
-				  			<span class="title">Collection Alpha</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
+				  			<span class="title">Badge A</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
 				  		</span>
 				  	</a>
 				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-e-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-f-s.png');"></span>
-				  		</span>
+				 <li>
+				 	<a class="badgethumb badgehash-b" href="#" style="background-image:url('../../img/badge/badgehash-b-m.png');">
 						<span class="detail">
-				  			<span class="title">Collection Beta</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
+				  			<span class="title">Badge B</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-c" href="#" style="background-image:url('../../img/badge/badgehash-c-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge C</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-d" href="#" style="background-image:url('../../img/badge/badgehash-d-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge D</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				  <li>
+				  	<a class="badgethumb badgehash-e" href="#" style="background-image:url('../../img/badge/badgehash-e-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge E</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
 				  		</span>
 				  	</a>
 				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-g-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-h-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-i-s.png');"></span>
-				  		</span>
+				 <li>
+				 	<a class="badgethumb badgehash-f" href="#" style="background-image:url('../../img/badge/badgehash-f-m.png');">
 						<span class="detail">
-				  			<span class="title">Collection Gamma</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
+				  			<span class="title">Badge F</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
 				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-g" href="#" style="background-image:url('../../img/badge/badgehash-g-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge G</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				 <li>
+				 	<a class="badgethumb badgehash-h" href="#" style="background-image:url('../../img/badge/badgehash-h-m.png');">
+						<span class="detail">
+				  			<span class="title">Badge H</span>
+				  			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				  		</span>
+				 	</a>
+				 </li>
+				  <li>
+				  	<a class="badgethumb badgehash-i" href="#" style="background-image:url('../../img/badge/badgehash-i-m.png');">
+				 		<span class="detail">
+				   			<span class="title">Badge I</span>
+				   			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				   		</span>
 				  	</a>
 				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-j-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-k-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Gamma</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-c-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-e-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Delta</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Epsilon</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-f-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Zeta</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-f-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Eta</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Theta</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-j-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Iota</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-k-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Kappa</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>
-				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
-				  		<span class="minithumbs">
-					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-g-s.png');"></span>
-					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
-					  		<span class="minithumb minithumb-3" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
-				  		</span>
-						<span class="detail">
-				  			<span class="title">Collection Lamda</span>
-				  			<span class="content">Contains 17 badges, modified three days ago.</span>
-				  		</span>
-				  	</a>
-				  </li>	  				  				  				  				  				  
+				   <li>
+				   	<a class="badgethumb badgehash-j" href="#" style="background-image:url('../../img/badge/badgehash-j-m.png');">
+				  		<span class="detail">
+				    			<span class="title">Badge J</span>
+				    			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				    		</span>
+				   	</a>
+				   </li>				  
+				    <li>
+				    	<a class="badgethumb badgehash-k" href="#" style="background-image:url('../../img/badge/badgehash-k-m.png');">
+				   		<span class="detail">
+				     			<span class="title">Badge K</span>
+				     			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				     		</span>
+				    	</a>
+				    </li>
+				     <li>
+				     	<a class="badgethumb badgehash-l" href="#" style="background-image:url('../../img/badge/badgehash-l-m.png');">
+				    		<span class="detail">
+				      			<span class="title">Badge L</span>
+				      			<span class="content">Issued by <em>Organization A</em> three days ago will expire in two months, seven days.<br>Exists in three collections.</span>
+				      		</span>
+				     	</a>
+				     </li>
 				</ul>
 			</div>
 		</div>
