--- a/collection/index.html
+++ b/collection/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="row">
 		<div class="large-12 columns">
-			<h2>Mozilla BackPack</h2>
+			<h2>Mozilla Backpack</h2>
 
 			<nav class="top-bar" style="">
 			          <ul class="title-area">
