--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			          
 			        <section class="top-bar-section">
 			            <ul class="left">
-			              <li><a href="index.html">Welcome</a></li>
+			              <li><a href="./">Welcome</a></li>
 			              <li><a href="./badge">Badges</a></li>
 			              <li><a href="./collection">Collections</a></li>
 			            </ul>
