--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 			<h3>Collections</h2>
 			<ul class="small-block-grid-1 large-block-grid-3 collections grid">
 				<li>
-					<ul class="badge-thumbs vertical">
+					<ul class="badge-thumbs vertical collectionhash-a">
+						<h5><span class="title">Collection Alpha</span></h5>
 						<li>
 							<a class="badgethumb badgehash-h" href="#" style="background-image:url('./img/badge/badgehash-i-s.png');">
 								<span class="detail">
@@ -150,11 +151,14 @@
 									<span class="content">Issued three days ago by <em>Organization I</em>.</span>
 								</span>
 							</a>
-						</li>					
+						</li>	
+						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
+						<a class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
-					<ul class="badge-thumbs vertical">
+					<ul class="badge-thumbs vertical collectionhash-b">
+						<h5><span class="title">Collection Beta</span></h5>
 						<li>
 							<a class="badgethumb badgehash-d" href="#" style="background-image:url('./img/badge/badgehash-f-s.png');">
 								<span class="detail">
@@ -178,11 +182,14 @@
 									<span class="content">Issued three days ago by <em>Organization A</em>.</span>
 								</span>
 							</a>
-						</li>					
+						</li>
+						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
+						<a class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
-					<ul class="badge-thumbs vertical">
+					<ul class="badge-thumbs vertical collectionhash-c">
+						<h5><span class="title">Collection Gamma</span></h5>
 						<li>
 							<a class="badgethumb badgehash-d" href="#" style="background-image:url('./img/badge/badgehash-d-s.png');">
 								<span class="detail">
@@ -214,7 +221,9 @@
 									<span class="content">Issued three days ago by <em>Organization P</em>.</span>
 								</span>
 							</a>
-						</li>					
+						</li>
+						<a class="collection_action cdel collectionhash-c" href="#">Delete</a>
+						<a class="collection_action csha collectionhash-c" href="#">Share</a>		
 					</ul>
 				</li>
 			</ul>
