add user menu and fix collections docroot

--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 			            <!-- Right Nav Section -->
 			            <ul class="right">
 			              <li class="divider hide-for-sall"></li>
-			              <li class=""><a href="#">Welcome michael@ballard.is!</a></li>
+			              <li class="">
+			              	<a href="#" data-dropdown="settings">Welcome michael@ballard.is!</a>
+			              	<ul id="settings" class="f-dropdown" data-dropdown-content>
+			              	  <li><a href="#">Settings</a></li>
+			              	  <li><a href="#">Public Profile</a></li>
+			              	  <li class="divider"></li>
+			              	  <li><a href="./issuer-1.html"><em style="color:red;">Restart Flow</em></a></li>
+			              	</ul>
+			              </li>
 			            </ul>
 			          </section></nav>
 		</div>
