add number badges as fragment to url for backpack alert

--- a/issuer-3.html
+++ b/issuer-3.html
@@ -81,10 +81,12 @@
 					<span class="checkbox"><input type="checkbox" name="badd" value="badgehash-c" checked></span>
 				</li>
 				<li>
-					<br>
-					<p class="label">You are adding 3 new badges to your Backpack!<p>
-					<a class="button small" href="./">Confirm</a>
-					 <a class="button small" onclick="window.close()" href="#">Cancel</a>
+				
+					<p class="label">You are adding 3 new badges to your Backpack!</p>
+					<div>
+						<a class="button small" href="./#newbadges=3">Confirm</a>
+					 	 <a class="button small" onclick="window.close()" href="#">Cancel</a>
+					 </div>
 				</li>
 			</ul>
 			<h4>These badges are already in your Backpack:</h2>
