fix relative links

--- a/badge/by-collection/collectionhash-x.html
+++ b/badge/by-collection/collectionhash-x.html
@@ -41,7 +41,7 @@
 			          	  <li><a href="#">Settings</a></li>
 			          	  <li><a href="#">Public Profile</a></li>
 			          	  <li class="divider"></li>
-			          	  <li><a href="./issuer-1.html"><em style="color:red;">Restart Flow</em></a></li>
+			          	  <li><a href="../../issuer-1.html"><em style="color:red;">Restart Flow</em></a></li>
 			          	</ul>
 			          </li>			            </ul>
 			          </section></nav>
