Remove line break

--- a/issuer-2.html
+++ b/issuer-2.html
@@ -29,7 +29,7 @@
 					<a class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
 						<span class="detail">
 							<span class="title">Badge A</span>
-							<span class="content">Issued three days ago by <em>Organization X</em>.<br>Expires in about a year.</span>
+							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
 					</a>
 				</li>
@@ -37,7 +37,7 @@
 					<a class="badgethumb badgehash-b" href="#" style="background-image:url('./img/badge/badgehash-b-s.png');">
 						<span class="detail">
 							<span class="title">Badge B</span>
-							<span class="content">Issued three days ago by <em>Organization X</em>.<br>Expires in about a year.</span>
+							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
 					</a>
 				</li>
@@ -45,7 +45,7 @@
 					<a class="badgethumb badgehash-c" href="#" style="background-image:url('./img/badge/badgehash-c-s.png');">
 						<span class="detail">
 							<span class="title">Badge C</span>
-							<span class="content">Issued three days ago by <em>Organization X</em>.<br>Expires in about a year.</span>
+							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
 					</a>
 				</li>
@@ -53,7 +53,7 @@
 					<a class="badgethumb badgehash-j" href="#" style="background-image:url('./img/badge/badgehash-j-s.png');">
 						<span class="detail">
 							<span class="title">Badge J</span>
-							<span class="content">Issued three days ago by <em>Organization X</em>.<br>Expires in about a year.</span>
+							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
 					</a>
 				</li>
@@ -61,7 +61,7 @@
 					<a class="badgethumb badgehash-k" href="#" style="background-image:url('./img/badge/badgehash-k-s.png');">
 						<span class="detail">
 							<span class="title">Badge K</span>
-							<span class="content">Issued three days ago by <em>Organization X</em>.<br>Expires in about a year.</span>
+							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
 					</a>
 				</li>
