public collection page, remove links from issuer flow badges

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							</a>
 						</li>	
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a class="collection_action csha collectionhash-b" href="#">Share</a>
+						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
@@ -192,7 +192,7 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a class="collection_action csha collectionhash-b" href="#">Share</a>
+						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
@@ -231,7 +231,7 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-c" href="#">Delete</a>
-						<a class="collection_action csha collectionhash-c" href="#">Share</a>		
+						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 			</ul>
