--- a/issuer-2.html
+++ b/issuer-2.html
@@ -26,44 +26,44 @@
 			 <a class="button small" onclick="window.close()" href="#">Cancel</a>
 			<ul class="small-block-grid-1 large-block-grid-1 grid badge-thumbs vertical">
 				<li>
-					<a class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
+					<div class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
 						<span class="detail">
 							<span class="title">Badge A</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-b" href="#" style="background-image:url('./img/badge/badgehash-b-s.png');">
+					<div class="badgethumb badgehash-b" href="#" style="background-image:url('./img/badge/badgehash-b-s.png');">
 						<span class="detail">
 							<span class="title">Badge B</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-c" href="#" style="background-image:url('./img/badge/badgehash-c-s.png');">
+					<div class="badgethumb badgehash-c" href="#" style="background-image:url('./img/badge/badgehash-c-s.png');">
 						<span class="detail">
 							<span class="title">Badge C</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-j" href="#" style="background-image:url('./img/badge/badgehash-j-s.png');">
+					<div class="badgethumb badgehash-j" href="#" style="background-image:url('./img/badge/badgehash-j-s.png');">
 						<span class="detail">
 							<span class="title">Badge J</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-k" href="#" style="background-image:url('./img/badge/badgehash-k-s.png');">
+					<div class="badgethumb badgehash-k" href="#" style="background-image:url('./img/badge/badgehash-k-s.png');">
 						<span class="detail">
 							<span class="title">Badge K</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.  in about a year.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 			</ul>
 		</div>
