--- a/issuer-3.html
+++ b/issuer-3.html
@@ -10,7 +10,7 @@
   	<link rel="stylesheet" href="stylesheets/app.css">
   	<script src="javascripts/vendor/custom.modernizr.js"></script>
 </head>
-<body class="issuer logged-in">
+<body class="issuer confirm logged-in">
 	<div class="row">
 		<div class="large-12 columns">
 			<h2>Mozilla Backpack</h2>
@@ -54,30 +54,30 @@
 			<h4>Choose which badges to accept:</h2>
 			<ul class="small-block-grid-1 large-block-grid-1 grid badge-thumbs vertical">
 				<li>
-					<a class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
+					<div class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
 						<span class="detail">
 							<span class="title">Badge A</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.</span>
 						</span>
-					</a>
+					</div>
 					<span class="checkbox"><input type="checkbox" name="badd" value="badgehash-a" checked></span>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-b" href="#" style="background-image:url('./img/badge/badgehash-b-s.png');">
+					<div class="badgethumb badgehash-b" href="#" style="background-image:url('./img/badge/badgehash-b-s.png');">
 						<span class="detail">
 							<span class="title">Badge B</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.</span>
 						</span>
-					</a>
+					</div>
 					<span class="checkbox"><input type="checkbox" name="badd" value="badgehash-b" checked></span>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-c" href="#" style="background-image:url('./img/badge/badgehash-c-s.png');">
+					<div class="badgethumb badgehash-c" href="#" style="background-image:url('./img/badge/badgehash-c-s.png');">
 						<span class="detail">
 							<span class="title">Badge C</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.</span>
 						</span>
-					</a>
+					</div>
 					<span class="checkbox"><input type="checkbox" name="badd" value="badgehash-c" checked></span>
 				</li>
 				<li>
@@ -92,20 +92,20 @@
 			<h4>These badges are already in your Backpack:</h2>
 			<ul class="small-block-grid-1 large-block-grid-1 grid badge-thumbs vertical">
 				<li>
-					<a class="badgethumb badgehash-j" href="#" style="background-image:url('./img/badge/badgehash-j-s.png');">
+					<div class="badgethumb badgehash-j" href="#" style="background-image:url('./img/badge/badgehash-j-s.png');">
 						<span class="detail">
 							<span class="title">Badge J</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 				<li>
-					<a class="badgethumb badgehash-k" href="#" style="background-image:url('./img/badge/badgehash-k-s.png');">
+					<div class="badgethumb badgehash-k" href="#" style="background-image:url('./img/badge/badgehash-k-s.png');">
 						<span class="detail">
 							<span class="title">Badge K</span>
 							<span class="content">Issued three days ago by <em>Organization X</em>.</span>
 						</span>
-					</a>
+					</div>
 				</li>
 			</ul>			
 		</div>
